--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "engines": {
-	"node": ">=16"
+    "node": ">=16"
   },
   "scripts": {
     "dev": "vite",
@@ -14,8 +14,12 @@
     "lint:fix": "yarn lint --fix"
   },
   "dependencies": {
+    "clsx": "^1.2.1",
+    "ky": "^0.33.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
+    "react-router-dom": "^6.10.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
