--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "vite-plugin-checker": "^0.5.6",
     "vite-plugin-react-click-to-component": "^2.0.0",
     "vite-plugin-sass-dts": "^1.3.4",
+    "vite-tsconfig-paths": "^4.2.0",
     "xo": "^0.54.1"
   }
 }
