--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "clsx": "^1.2.1",
     "font-awesome": "^4.7.0",
+    "gsap": "^3.11.5",
     "ky": "^0.33.3",
     "react": "^18.2.0",
     "react-container-query": "^0.12.1",
